# quickplot

./: .gitignore  AUTHORS  App.cpp  App.h  App_parseArgs.cpp  ArrayField.h  ButtonBar.cpp  ButtonBar.h  CONFIG  ChangeLog  ColorGen.cpp  ColorGen.h  Field.cpp  Field.h  FieldReader.cpp  FieldReader.h  File.cpp  File.h  FileList.cpp  FileList.h  FileReader.cpp  FileReader.h  File_readASCIIFile.cpp  File_readSndFile.cpp  File_readSndShort.cpp  Globel.cpp  Globel.h  Graph.cpp  Graph.h  GraphConfig.cpp  GraphConfig.h  Graph_drawAutoGrid.cpp  LinearField.cpp  LinearField.h  ListField.h  LogField.h  MainMenuBar.cpp  MainMenuBar.h  MainWindow.cpp  MainWindow.h  (+114 more)
